networkpolicy/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: pod
  name: p1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pod
  template:
    metadata:
      labels:
        app: pod
    spec:
      containers:
      - image: mysql:5.7
        name: p1
        ports: 
        - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: db-svc
spec:
  selector:
    app: pod
  ports:
  - port: 3306
    targetPort: 3306
