networkpolicy/wp1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wp-dep1
  name: wp-dep1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wp-dep1
  template:
    metadata:
      labels:
        app: wp-dep1
    spec:
      containers:
      - image: wordpress
        name: wordpress
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: wp-svc1
spec:
  selector:
    app: wp-dep1
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30011
