networkpolicy/nw-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nw-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: pod
  policyTypes:
    - Ingress   #defining rules on incoming traffic for pod with label app:pod
  ingress:
    - from:
    # allows connections from Pods in the Namespace with label ns=ns2, or from any Pod in default namespace(becaus nw policy and pod app:pod are in default) with the label app=wp-dep1
       #- namespaceSelector:
       #    matchLabels:
       #      ns: ns2
        - podSelector:
            matchLabels:
              app: wp-dep1  #only pods with app:wp-dep1 label can communicate with pods with label app:pod
      ports:
        - protocol: TCP
          port: 3306
          
=========================================================================================

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nw-policy
  namespace: ns1
spec:
  podSelector:
    matchLabels:
      app: pod
  policyTypes:
    - Ingress   #defining rules on incoming traffic for pod with label app:pod in ns ns1.(pod with label app:pod in in ns ns1)
  ingress:
    - from:
    # allows connections from Pods with the label app=wp-dep1 in the Namespace with label ns=ns2
       - namespaceSelector:
            matchLabels:
              ns: ns2
         podSelector:
            matchLabels:
              app: wp-dep1 
      ports:
        - protocol: TCP
          port: 3306
          
          
 ==================================================================================================
 
 #allowing no incoming and outgoing traffic on pod
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nw-policy
  namespace: ns1
spec:
  podSelector:
    matchLabels:
      app: pod
  policyTypes:
    - Ingress   
    - Egress
